# trends.earth-schemas

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  land_cover.py  pavement.py  pyproject.toml  reporting.py  schemas.py  setup.py  tasks.py  unccd.py  version.json
.github/: copilot-instructions.md
.github/workflows/: test.yaml
docs/source/: conf.py  index.rst  productivity.rst  reporting.rst  schema.rst
docs/source/api/: error_recode.rst  index.rst  land_cover.rst  results.rst
docs/source/reporting/: index.rst
te_schemas/: __init__.py  algorithms.py  analysis.py  aoi.py  datafile.py  datasets.py  error_recode.py  jobs.py  land_cover.py  path.py  productivity.py  reporting.py  results.py  schemas.py  scripts.py  soc.py
tests/: test_analysis.py  test_aoi.py  test_fileresults_get_all_uris.py  test_jobs.py  test_land_cover.py  test_marshmallow_compat.py  test_results.py  test_schema_base.py
tests/data/: land_cover-legend-mapbiomas.json  land_cover-nesting-mapbiomas_mapbiomas.json
trendsearth_schemas/: schemas.py
