[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "te_schemas"
dynamic = ["version"]
description = "Schemas supporting the Trends.Earth QGIS plugin."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Conservation International", email = "trends.earth@conservation.org"}
]
maintainers = [
    {name = "Conservation International", email = "trends.earth@conservation.org"}
]
keywords = ["land degradation", "LDN", "SDG", "sustainable development goals"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "defusedxml>=0.7.1",
    "marshmallow>=4.0.0,<5.0.0",
    "marshmallow-dataclass>=8.7.1",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "pytest"]
docs = ["sphinx", "sphinx_rtd_theme"]

[project.urls]
Homepage = "https://github.com/ConservationInternational/trends.earth-schemas"
Repository = "https://github.com/ConservationInternational/trends.earth-schemas"
"Bug Tracker" = "https://github.com/ConservationInternational/trends.earth-schemas/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["te_schemas*"]

[tool.setuptools.package-data]
te_schemas = []

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
